code/typescript/FactSetPortfolioOptimizer/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Portfolio Optimizer client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-factsetportfoliooptimizer)](https://www.npmjs.com/package/@factset/sdk-factsetportfoliooptimizer)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Engines Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1
- SDK version: 0.9.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsetportfoliooptimizer@0.9.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsetportfoliooptimizer@0.9.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, OptimizationsApi } = require('@factset/sdk-factsetportfoliooptimizer');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new OptimizationsApi();
const id = "id_example"; // String | from url, provided from the location header in the Run Optimization endpoint

// Call api endpoint
apiInstance.cancelFPOOptimizationById(id).then(
  () => {
    console.log('API called successfully.');
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-factsetportfoliooptimizer');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsetportfoliooptimizer.OptimizationsApi* | [**cancelFPOOptimizationById**](docs/OptimizationsApi.md#cancelFPOOptimizationById) | **DELETE** /analytics/engines/fpo/v1/optimizations/{id} | Cancel FPO optimization by id
*factsetportfoliooptimizer.OptimizationsApi* | [**getFPOOptimizationById**](docs/OptimizationsApi.md#getFPOOptimizationById) | **GET** /analytics/engines/fpo/v1/optimizations/{id} | Get FPO optimization by id
*factsetportfoliooptimizer.OptimizationsApi* | [**runFPOOptimization**](docs/OptimizationsApi.md#runFPOOptimization) | **POST** /analytics/engines/fpo/v1/optimizations | Run FPO optimization
*factsetportfoliooptimizer.StrategyDocumentsApi* | [**getFPOStrategyDocuments**](docs/StrategyDocumentsApi.md#getFPOStrategyDocuments) | **GET** /analytics/engines/fpo/v1/strategies/{path} | Get FactSet Portfolio Optimizer strategy documents and sub-directories in a directory


## Documentation for Models

 - [factsetportfoliooptimizer.DocumentDirectories](docs/DocumentDirectories.md)
 - [factsetportfoliooptimizer.FPOAccount](docs/FPOAccount.md)
 - [factsetportfoliooptimizer.FPOOptimizationParameters](docs/FPOOptimizationParameters.md)
 - [factsetportfoliooptimizer.OptimalPortfolio](docs/OptimalPortfolio.md)
 - [factsetportfoliooptimizer.Optimization](docs/Optimization.md)
 - [factsetportfoliooptimizer.OptimizerAccount](docs/OptimizerAccount.md)
 - [factsetportfoliooptimizer.OptimizerAccountOverrides](docs/OptimizerAccountOverrides.md)
 - [factsetportfoliooptimizer.OptimizerOptimalHoldings](docs/OptimizerOptimalHoldings.md)
 - [factsetportfoliooptimizer.OptimizerOutputTypes](docs/OptimizerOutputTypes.md)
 - [factsetportfoliooptimizer.OptimizerStrategy](docs/OptimizerStrategy.md)
 - [factsetportfoliooptimizer.OptimizerStrategyOverrides](docs/OptimizerStrategyOverrides.md)
 - [factsetportfoliooptimizer.OptimizerTradesList](docs/OptimizerTradesList.md)
 - [factsetportfoliooptimizer.PaDoc](docs/PaDoc.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
