code/typescript/FactSetPortfolioOptimizer/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Portfolio Optimizer client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-factsetportfoliooptimizer)](https://www.npmjs.com/package/@factset/sdk-factsetportfoliooptimizer)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3
- SDK version: 0.22.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsetportfoliooptimizer@0.22.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsetportfoliooptimizer@0.22.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-factsetportfoliooptimizer');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = "'Client:Foo/Bar'"; // String | The directory to get the accounts and sub-directories in

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-factsetportfoliooptimizer');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsetportfoliooptimizer.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*factsetportfoliooptimizer.CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*factsetportfoliooptimizer.FPOOptimizerApi* | [**cancelOptimizationById**](docs/FPOOptimizerApi.md#cancelOptimizationById) | **DELETE** /analytics/engines/fpo/v3/optimizations/{id} | Cancel FPO optimization by id
*factsetportfoliooptimizer.FPOOptimizerApi* | [**getOptimizationParameters**](docs/FPOOptimizerApi.md#getOptimizationParameters) | **GET** /analytics/engines/fpo/v3/optimizations/{id} | Get FPO optimization parameters by id
*factsetportfoliooptimizer.FPOOptimizerApi* | [**getOptimizationResult**](docs/FPOOptimizerApi.md#getOptimizationResult) | **GET** /analytics/engines/fpo/v3/optimizations/{id}/result | Get FPO optimization result by id
*factsetportfoliooptimizer.FPOOptimizerApi* | [**getOptimizationStatusById**](docs/FPOOptimizerApi.md#getOptimizationStatusById) | **GET** /analytics/engines/fpo/v3/optimizations/{id}/status | Get FPO optimization status by id
*factsetportfoliooptimizer.FPOOptimizerApi* | [**postAndOptimize**](docs/FPOOptimizerApi.md#postAndOptimize) | **POST** /analytics/engines/fpo/v3/optimizations | Create and Run FPO optimization
*factsetportfoliooptimizer.FPOOptimizerApi* | [**putAndOptimize**](docs/FPOOptimizerApi.md#putAndOptimize) | **PUT** /analytics/engines/fpo/v3/optimizations/{id} | Create or Update FPO optimization and run it.
*factsetportfoliooptimizer.StrategyDocumentsApi* | [**getFPOStrategyDocuments**](docs/StrategyDocumentsApi.md#getFPOStrategyDocuments) | **GET** /analytics/engines/fpo/v3/strategies/{path} | Get FactSet Portfolio Optimizer strategy documents and sub-directories in a directory


## Documentation for Models

 - [factsetportfoliooptimizer.AccountDirectories](docs/AccountDirectories.md)
 - [factsetportfoliooptimizer.AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [factsetportfoliooptimizer.CalculationInfo](docs/CalculationInfo.md)
 - [factsetportfoliooptimizer.CalculationInfoRoot](docs/CalculationInfoRoot.md)
 - [factsetportfoliooptimizer.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [factsetportfoliooptimizer.Currency](docs/Currency.md)
 - [factsetportfoliooptimizer.CurrencyRoot](docs/CurrencyRoot.md)
 - [factsetportfoliooptimizer.DocumentDirectories](docs/DocumentDirectories.md)
 - [factsetportfoliooptimizer.DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [factsetportfoliooptimizer.Error](docs/Error.md)
 - [factsetportfoliooptimizer.ErrorSource](docs/ErrorSource.md)
 - [factsetportfoliooptimizer.FPOAccount](docs/FPOAccount.md)
 - [factsetportfoliooptimizer.FPOOptimizationParameters](docs/FPOOptimizationParameters.md)
 - [factsetportfoliooptimizer.FPOOptimizationParametersRoot](docs/FPOOptimizationParametersRoot.md)
 - [factsetportfoliooptimizer.ObjectRoot](docs/ObjectRoot.md)
 - [factsetportfoliooptimizer.OptimalPortfolio](docs/OptimalPortfolio.md)
 - [factsetportfoliooptimizer.Optimization](docs/Optimization.md)
 - [factsetportfoliooptimizer.OptimizerAccountOverrides](docs/OptimizerAccountOverrides.md)
 - [factsetportfoliooptimizer.OptimizerOptimalHoldings](docs/OptimizerOptimalHoldings.md)
 - [factsetportfoliooptimizer.OptimizerOutputTypes](docs/OptimizerOutputTypes.md)
 - [factsetportfoliooptimizer.OptimizerStrategy](docs/OptimizerStrategy.md)
 - [factsetportfoliooptimizer.OptimizerStrategyOverrides](docs/OptimizerStrategyOverrides.md)
 - [factsetportfoliooptimizer.OptimizerTradesList](docs/OptimizerTradesList.md)
 - [factsetportfoliooptimizer.PaDoc](docs/PaDoc.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
